[project]
name = "dj4h"
version = "0.1.0"
description = ""
authors = [
    { name = "Gamingdy" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-cord (==2.6.1)",
    "python-dotenv (==1.1.1)",
    "pillow (>=11.3.0,<12.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.20.0,<1.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "25.12.0"